--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
+    "react-modal": "^3.12.1",
     "typescript": "^4.1.3"
   }
 }
